<resources>
    <string name="app_name">Week02</string>
    <string name="welcome_message">Welcome to Android!</string>
    <string name="large_text">Large Text</string>
    <string name="register_text">Registration Form</string>
    <string name="welcome_text">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register_btn">Register</string>
</resources>